--- a/src/main/resources/templates/classSchedule.html
+++ b/src/main/resources/templates/classSchedule.html
@@ -429,7 +429,7 @@
                     });
                 };
             } else if (this.classList.contains('occupied')) {
-                //Запрос на получение уроков
+                //Запрос на получение уроков ---------------------------------------------
             }
         });
     });
